Updated Food Section for Explore Cities

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -22,6 +22,17 @@
           "height": 0,
           "width": 0
         },
+        "35868645": {
+          "id": "35868645",
+          "path": "public/app/components/explore-world/explore-places/explore-attractions/explore-attractions.html",
+          "output": "public/app/components/explore-world/explore-places/explore-attractions/explore-attractions.html",
+          "name": "explore-attractions.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
         "71801449": {
           "id": "71801449",
           "path": "config/database.js",
@@ -1943,33 +1954,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "3ec8aa87": {
-          "id": "3ec8aa87",
-          "path": "public/app/components/road-trip/explore-places/explore-places.html",
-          "output": "public/app/components/road-trip/explore-places/explore-places.html",
-          "name": "explore-places.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "9d042504": {
-          "id": "9d042504",
-          "path": "public/app/components/road-trip/explore-places/explore-places.js",
-          "output": "public/app/components/road-trip/explore-places/explore-places-dist.js",
-          "name": "explore-places.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "b62aba14": {
           "id": "b62aba14",
           "path": "public/app/components/road-trip/landing-page/landing-page.html",
@@ -2440,49 +2424,6 @@
           "height": 0,
           "width": 0
         },
-        "dedc1c2a": {
-          "id": "dedc1c2a",
-          "path": "public/app/components/road-trip/explore-cities/explore-cities.html",
-          "output": "public/app/components/road-trip/explore-cities/explore-cities.html",
-          "name": "explore-cities.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "2810802a": {
-          "id": "2810802a",
-          "path": "public/app/components/road-trip/explore-cities/explore-cities.js",
-          "output": "public/app/components/road-trip/explore-cities/explore-cities-dist.js",
-          "name": "explore-cities.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "a62f5380": {
-          "id": "a62f5380",
-          "path": "public/app/components/road-trip/explore-videos/explore-cities.js",
-          "output": "public/app/components/road-trip/explore-videos/explore-cities-dist.js",
-          "name": "explore-cities.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "a48ee6bd": {
           "id": "a48ee6bd",
           "path": "public/images/trips/denver.jpg",
@@ -2691,33 +2632,6 @@
           "height": 0,
           "width": 0
         },
-        "17a40c23": {
-          "id": "17a40c23",
-          "path": "public/app/components/road-trip/places-details/places-details.html",
-          "output": "public/app/components/road-trip/places-details/places-details.html",
-          "name": "places-details.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "d2cb3447": {
-          "id": "d2cb3447",
-          "path": "public/app/components/road-trip/places-details/places-details.js",
-          "output": "public/app/components/road-trip/places-details/places-details-dist.js",
-          "name": "places-details.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "08166121": {
           "id": "08166121",
           "path": "public/images/airbnb2.png",
@@ -2743,6 +2657,159 @@
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "8ef53543": {
+          "id": "8ef53543",
+          "path": "public/javascripts/v-accordion.js",
+          "output": "public/javascripts/v-accordion-dist.js",
+          "name": "v-accordion.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "415a45da": {
+          "id": "415a45da",
+          "path": "public/images/adventure/no_fly_zone_chicago.JPG",
+          "output": "public/images/adventure/no_fly_zone_chicago.JPG",
+          "name": "no_fly_zone_chicago.JPG",
+          "category": "IMAGE",
+          "size": 69868,
+          "type": "jpg",
+          "initialSize": 69868,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ed69781c": {
+          "id": "ed69781c",
+          "path": "public/app/components/explore-world/explore-cities/explore-cities.html",
+          "output": "public/app/components/explore-world/explore-cities/explore-cities.html",
+          "name": "explore-cities.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "53bdf02c": {
+          "id": "53bdf02c",
+          "path": "public/app/components/explore-world/explore-cities/explore-cities.js",
+          "output": "public/app/components/explore-world/explore-cities/explore-cities-dist.js",
+          "name": "explore-cities.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "e198798d": {
+          "id": "e198798d",
+          "path": "public/app/components/road-trip/list-places/list-places.html",
+          "output": "public/app/components/road-trip/list-places/list-places.html",
+          "name": "list-places.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "e163d51f": {
+          "id": "e163d51f",
+          "path": "public/app/components/road-trip/list-places/list-places.js",
+          "output": "public/app/components/road-trip/list-places/list-places-dist.js",
+          "name": "list-places.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "6cef44c5": {
+          "id": "6cef44c5",
+          "path": "public/app/components/explore-world/explore-places/explore-food/explore-food.html",
+          "output": "public/app/components/explore-world/explore-places/explore-food/explore-food.html",
+          "name": "explore-food.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "46d21ea8": {
+          "id": "46d21ea8",
+          "path": "public/app/components/explore-world/explore-places/explore-food/explore-food.js",
+          "output": "public/app/components/explore-world/explore-places/explore-food/explore-food-dist.js",
+          "name": "explore-food.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "def45b10": {
+          "id": "def45b10",
+          "path": "public/app/components/explore-world/explore-places/explore-attractions/explore-attractions.js",
+          "output": "public/app/components/explore-world/explore-places/explore-attractions/explore-attractions-dist.js",
+          "name": "explore-attractions.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "01870604": {
+          "id": "01870604",
+          "path": "public/app/components/explore-world/explore-places/explore-adventure/explore-adventure.html",
+          "output": "public/app/components/explore-world/explore-places/explore-adventure/explore-adventure.html",
+          "name": "explore-adventure.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "2b2f67a1": {
+          "id": "2b2f67a1",
+          "path": "public/app/components/explore-world/explore-places/explore-adventure/explore-adventure.js",
+          "output": "public/app/components/explore-world/explore-places/explore-adventure/explore-adventure-dist.js",
+          "name": "explore-adventure.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
