--- a/prepros.cfg
+++ b/prepros.cfg
@@ -2528,19 +2528,6 @@
           "height": 0,
           "width": 0
         },
-        "acfcaf64": {
-          "id": "acfcaf64",
-          "path": "public/images/food/chicago_shakes.jpeg",
-          "output": "public/images/food/chicago_shakes.jpeg",
-          "name": "chicago_shakes.jpeg",
-          "category": "IMAGE",
-          "size": 26697,
-          "type": "jpeg",
-          "initialSize": 26697,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "29d3c127": {
           "id": "29d3c127",
           "path": "public/images/food/garrettpopcorn.jpg",
@@ -2810,6 +2797,45 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "2fd04c3a": {
+          "id": "2fd04c3a",
+          "path": "public/images/play.png",
+          "output": "public/images/play.png",
+          "name": "play.png",
+          "category": "IMAGE",
+          "size": 3763,
+          "type": "png",
+          "initialSize": 3763,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c8a5c6ef": {
+          "id": "c8a5c6ef",
+          "path": "public/images/food/chicago_vegan_food.jpg",
+          "output": "public/images/food/chicago_vegan_food.jpg",
+          "name": "chicago_vegan_food.jpg",
+          "category": "IMAGE",
+          "size": 19253300,
+          "type": "jpg",
+          "initialSize": 19253300,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "acfcaf64": {
+          "id": "acfcaf64",
+          "path": "public/images/food/chicago_shakes.jpeg",
+          "output": "public/images/food/chicago_shakes.jpeg",
+          "name": "chicago_shakes.jpeg",
+          "category": "IMAGE",
+          "size": 101818,
+          "type": "jpeg",
+          "initialSize": 101818,
+          "optimized": false,
+          "height": 0,
+          "width": 0
         }
       },
       "deploymentHistory": {},
